# elaras-whisper

./: .gitignore  MANIFEST.in  README.md  elaras_whisper.py  elaras_whisper_ui.py  pyproject.toml
ui/: index.html
ui/static/: app.js  style.css
