[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "elaras-whisper"
version = "0.2.0"
description = "Elara's Whisper — softens machine-spun tracks with spectral breath, air, micro-dynamics, and gentle warmth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kwizzlesurp10-ctrl" }]
keywords = [
    "audio",
    "suno",
    "spectral",
    "post-processing",
    "music",
    "lofi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
ui = ["flask>=3.0"]
dev = ["pytest>=7.0", "flask>=3.0"]

[project.scripts]
elaras-whisper = "elaras_whisper:main"
elaras_whisper = "elaras_whisper:main"
elaras-whisper-ui = "elaras_whisper_ui:main"

[project.urls]
Homepage = "https://github.com/kwizzlesurp10-ctrl/elaras-whisper"
Repository = "https://github.com/kwizzlesurp10-ctrl/elaras-whisper"

[tool.setuptools]
py-modules = ["elaras_whisper", "elaras_whisper_ui"]
include-package-data = true

[tool.setuptools.package-data]
# UI assets live beside the modules when installed editable from this repo
"*" = ["ui/**/*"]
